<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".race_type.attandees_details.AttandeesDetailsActivity">


    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:elevation="1dp"
        app:titleTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <ImageView
            android:id="@+id/im_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_baseline_arrow_back_24"/>

        <TextView
            android:id="@+id/tv_tool_bar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Total Attandees"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginStart="32dp"
            android:textSize="16sp"/>

    </com.google.android.material.appbar.MaterialToolbar>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="55dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="4dp"
        app:layout_constraintTop_toBottomOf="@+id/tool_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <HorizontalScrollView
            android:id="@+id/hScroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:scrollbars="none"
            app:layout_constraintTop_toBottomOf="@+id/ll"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:orientation="vertical">



                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="visible"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/hd_card_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="5dp"
                        app:cardElevation="4dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginStart="2dp"
                        android:layout_marginEnd="2dp"
                        android:layout_marginBottom="2dp"
                        android:layout_gravity="center">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">



                            <TextView
                                android:id="@+id/start_time"
                                android:layout_width="100dp"
                                android:layout_height="32dp"
                                android:text="@string/starttime"
                                android:textStyle="bold"
                                android:gravity="center"
                                android:background="@drawable/border"
                                android:textSize="16sp"
                                android:textColor="@color/black" />

                            <TextView
                                android:id="@+id/tv_chest_no"
                                android:layout_width="100dp"
                                android:layout_height="32dp"
                                android:text="Chest No"
                                android:gravity="center"
                                android:textStyle="bold"
                                android:background="@drawable/border"
                                android:textSize="16sp"
                                android:textColor="@color/black" />

                            <TextView
                                android:id="@+id/tvName"
                                android:layout_width="100dp"
                                android:layout_height="32dp"
                                android:text="@string/name"
                                android:gravity="center"
                                android:background="@drawable/border"
                                android:textStyle="bold"
                                android:textSize="16sp"
                                android:textColor="@color/black"/>
                            <TextView
                                android:id="@+id/tv_gender"
                                android:layout_width="100dp"
                                android:layout_height="32dp"
                                android:text="@string/gender"
                                android:textStyle="bold"
                                android:gravity="center"
                                android:background="@drawable/border"
                                android:textSize="16sp"
                                android:textColor="@color/black" />

                            <TextView
                                android:id="@+id/army_number"
                                android:layout_width="100dp"
                                android:layout_height="32dp"
                                android:text="@string/dob"
                                android:textStyle="bold"
                                android:gravity="center"
                                android:background="@drawable/border"

                                android:textSize="16sp"
                                android:textColor="@color/black" />
                            <TextView
                                android:id="@+id/soldireType"
                                android:layout_width="100dp"
                                android:layout_height="32dp"
                                android:text="@string/armynumber"
                                android:gravity="center"
                                android:background="@drawable/border"
                                android:textStyle="bold"
                                android:textSize="16sp"
                                android:textColor="@color/black" />
                            <TextView
                                android:id="@+id/unit_value"
                                android:layout_width="100dp"
                                android:layout_height="32dp"
                                android:text="@string/soldier"
                                android:textStyle="bold"
                                android:gravity="center"
                                android:background="@drawable/border"
                                android:textSize="16sp"
                                android:textColor="@color/black" />
                            <TextView
                                android:id="@+id/company_value"
                                android:layout_width="100dp"
                                android:layout_height="32dp"
                                android:textStyle="bold"
                                android:text="@string/unit_value"
                                android:gravity="center"
                                android:background="@drawable/border"
                                android:textSize="16sp"
                                android:textColor="@color/black" />


                            <TextView
                                android:id="@+id/tv_rank"
                                android:layout_width="100dp"
                                android:layout_height="32dp"
                                android:text="Rank"
                                android:textStyle="bold"
                                android:gravity="center"
                                android:background="@drawable/border"
                                android:textSize="16sp"
                                android:textColor="@color/black" />

                            <TextView
                                android:id="@+id/tv_company"
                                android:layout_width="100dp"
                                android:layout_height="32dp"
                                android:text="Company"
                                android:gravity="center"
                                android:textStyle="bold"
                                android:background="@drawable/border"
                                android:textSize="16sp"
                                android:textColor="@color/black" />

                            <TextView
                                android:id="@+id/tv_posting"
                                android:layout_width="100dp"
                                android:layout_height="32dp"
                                android:text="Posting"
                                android:gravity="center"
                                android:textStyle="bold"
                                android:background="@drawable/border"
                                android:textSize="16sp"
                                android:textColor="@color/black" />
                        </LinearLayout>

                    </androidx.cardview.widget.CardView>
                </LinearLayout>


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/list_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="8dp"
                    tools:listitem="@layout/attandee_details"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintTop_toBottomOf="@+id/cardView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

            </LinearLayout>

        </HorizontalScrollView>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>