<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".bpet.VHopeActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:elevation="1dp"
        app:titleTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <ImageView
            android:id="@+id/im_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_baseline_arrow_back_24"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="V Rope"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginStart="32dp"
            android:textSize="16sp"/>

        <ImageView
            android:id="@+id/blinkingDot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="•"
            android:background="@drawable/ic_green_dot"
            android:layout_marginEnd="18dp"
            android:layout_gravity="end|center"
            android:textSize="38sp"
            android:visibility="gone"
            android:textColor="@color/green2" />
    </com.google.android.material.appbar.MaterialToolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="55dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="4dp"
                app:cardCornerRadius="8dp"
                android:backgroundTint="@color/white"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:textSize="16sp"
                            android:text="@string/event_type"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/gray_color"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:layout_marginStart="8dp"
                            android:text="V-Rope"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:textSize="16sp"
                            android:text="Date:"/>

                        <TextView
                            android:id="@+id/tvCurrentDateTime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/gray_color"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:layout_marginStart="8dp"
                            android:text="Sep 10,2023"/>

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:layout_width="130dp"
                    android:layout_height="48dp"
                    android:background="@color/soft_green"
                    android:text="Sr No"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="8dp"
                    android:gravity="center"
                    android:textColor="@color/white"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/tv_chest_no"
                    android:layout_width="250dp"
                    android:layout_height="48dp"
                    android:background="@color/soft_green"
                    android:text="Chest No "
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_marginTop="8dp"
                    android:paddingStart="4pt"
                    android:paddingTop="5pt"
                    android:textColor="@color/white"
                    android:layout_marginStart="150dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/list_of_item"
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="8dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/two_point_meter_layout"
                    app:layout_constraintTop_toBottomOf="@+id/tv_chest_no"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                </androidx.recyclerview.widget.RecyclerView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Total count 3"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:visibility="gone"
                    android:layout_marginTop="8dp"
                    android:layout_gravity="start"
                    android:layout_marginStart="8dp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@+id/list_of_item"
                    app:layout_constraintStart_toStartOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_pass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:text="@string/pass"
                    android:layout_marginTop="8dp"
                    android:textAllCaps="false"
                    android:layout_marginBottom="12dp"
                    android:backgroundTint="@color/forest_green"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_fail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:text="@string/fail"
                    android:layout_marginTop="8dp"
                    android:textAllCaps="false"
                    android:layout_marginBottom="12dp"
                    android:backgroundTint="@color/red" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:text="@string/clear"
                    android:layout_marginTop="8dp"
                    android:textAllCaps="false"
                    android:layout_marginBottom="12dp"
                    android:backgroundTint="@color/blue" />

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:text="Submit"
                android:visibility="visible"
                android:textAllCaps="false"
                android:backgroundTint="@color/blue"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>